--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/node": "22.9.3",
         "@types/react": "18.3.12",
         "@types/react-dom": "18.3.1",
+        "@typescript-eslint/eslint-plugin": "6.21.0",
         "eslint": "8.44.0",
         "eslint-config-next": "15.0.3",
         "typescript": "5.6.3"
