--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emotion/react": "11.14.0",
+        "@emotion/styled": "11.14.1",
+        "@mui/icons-material": "7.2.0",
+        "@mui/material": "7.2.0",
         "next": "15.0.3",
         "react": "18.3.1",
         "react-dom": "18.3.1"
