--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "dependencies": {
         "@emotion/react": "11.14.0",
         "@emotion/styled": "11.14.1",
+        "@hookform/resolvers": "5.1.1",
         "@mui/icons-material": "7.2.0",
         "@mui/material": "7.2.0",
         "next": "15.0.3",
         "react": "18.3.1",
-        "react-dom": "18.3.1"
+        "react-dom": "18.3.1",
+        "react-hook-form": "7.59.0"
     },
     "devDependencies": {
         "@types/node": "22.9.3",
