--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "next": "15.0.3",
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "react-hook-form": "7.59.0"
+        "react-hook-form": "7.59.0",
+        "yup": "1.6.1"
     },
     "devDependencies": {
         "@types/node": "22.9.3",
