--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-hook-form": "7.59.0",
-        "yup": "1.6.1"
+        "yup": "1.6.1",
+        "zustand": "5.0.6"
     },
     "devDependencies": {
         "@types/node": "22.9.3",
