--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@hookform/resolvers": "5.1.1",
         "@mui/icons-material": "7.2.0",
         "@mui/material": "7.2.0",
+        "axios": "1.10.0",
         "next": "15.0.3",
         "react": "18.3.1",
         "react-dom": "18.3.1",
